# rpi-setup

./: .gitignore  app_ver  build.sh  setup.sh
commons/src/rpisetup/commons/: ExecutionOutput.java  Library.java  LibraryExecOutput.java
cxx/: CMakeLists.txt
cxx/include/app/Application/: Mount.h
cxx/src/app/: Mount.cpp
cxx/src/app/commons/: ConsoleSize.cpp  ExceptionHandle.cpp  UserIO.cpp
extres/examples/: ApplyHostname.json  FullConfig.json
extres/examples/custom-actions/: CopyFile.json
src/net/bc100dev/rpisetup/: NativeLoader.java  RPIMain.java
src/net/bc100dev/rpisetup/config/: AppConfig.java  AppProcess.java  ConfigAction.java  MountPath.java  Network.java  Swap.java  SystemKernel.java  SystemUser.java
src/net/bc100dev/rpisetup/config/custom/: ActionCopy.java
src/net/bc100dev/rpisetup/lib/: Losetup.java  Mount.java
src/net/bc100dev/rpisetup/res/: actions.json  app_ver.cfg
src/net/bc100dev/rpisetup/res/cfg/: NM.nmconnection  net_static
